tests/ui/args-invalid-names.stderr
error: arg(long) name must NOT be empty
 --> tests/ui/args-invalid-names.rs:3:18
  |
3 |     #[arg(long = "")]
  |                  ^^

error: arg(long) name must NOT contain '=' or ASCII control characters
 --> tests/ui/args-invalid-names.rs:5:18
  |
5 |     #[arg(long = "\0")]
  |                  ^^^^

error: arg(long) name is automatically prefixed by "--", and you should not add more "-" prefix
 --> tests/ui/args-invalid-names.rs:7:18
  |
7 |     #[arg(long = "-foo")]
  |                  ^^^^^^

error: arg(long) name must NOT contain '=' or ASCII control characters
 --> tests/ui/args-invalid-names.rs:9:18
  |
9 |     #[arg(long = "a=b")]
  |                  ^^^^^

error: arg(short) name must NOT be '-', '=' or ASCII control characters
  --> tests/ui/args-invalid-names.rs:12:19
   |
12 |     #[arg(short = '-')]
   |                   ^^^

error: arg(short) name must NOT be '-', '=' or ASCII control characters
  --> tests/ui/args-invalid-names.rs:14:19
   |
14 |     #[arg(short = '=')]
   |                   ^^^

error: arg(short) name must NOT be '-', '=' or ASCII control characters
  --> tests/ui/args-invalid-names.rs:16:19
   |
16 |     #[arg(short = '\x1e')]
   |                   ^^^^^^
